[gd_scene load_steps=6 format=3 uid="uid://dfwbkacp7ok57"]

[ext_resource type="PackedScene" uid="uid://juaf74hugtwi" path="res://compare_size_game/scenes/play_zone.tscn" id="1_gci7t"]
[ext_resource type="Script" path="res://compare_size_game/scripts/compare_size_game.gd" id="1_x8ww5"]
[ext_resource type="Script" path="res://compare_size_game/scripts/single_player_game_manager.gd" id="2_tf01i"]

[sub_resource type="PlaneMesh" id="PlaneMesh_u7stp"]
size = Vector2(50, 24)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mv32i"]
albedo_color = Color(0.215686, 0.380392, 0.184314, 1)

[node name="CompareSizeGame" type="Node3D"]
script = ExtResource("1_x8ww5")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="WinFailIndicatorLocationMarker" type="Marker2D" parent="HUD"]
position = Vector2(975, 324)

[node name="ScoreLabel" type="Label" parent="HUD"]
visible = false
offset_left = 100.0
offset_top = 301.0
offset_right = 158.0
offset_bottom = 324.0
text = "分数：0"

[node name="SinglePlayerGameManager" type="Node" parent="."]
script = ExtResource("2_tf01i")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
shadow_opacity = 0.65
shadow_blur = 5.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0)
projection = 1
size = 24.0

[node name="Table" type="Node3D" parent="."]

[node name="Surface" type="MeshInstance3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0329781, 0)
mesh = SubResource("PlaneMesh_u7stp")
surface_material_override/0 = SubResource("StandardMaterial3D_mv32i")

[node name="LocalPlayZone" parent="Table" instance=ExtResource("1_gci7t")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.1, 8)
playable = true

[node name="RemotePlayZone" parent="Table" instance=ExtResource("1_gci7t")]
transform = Transform3D(-1, -8.74228e-08, 0, -3.82137e-15, 4.37114e-08, 1, -8.74228e-08, 1, -4.37114e-08, 0, 0.1, -8)

[connection signal="acquire_draw_card" from="Table/LocalPlayZone" to="." method="_on_local_play_zone_acquire_draw_card"]
[connection signal="player_play_card" from="Table/LocalPlayZone" to="." method="_on_local_play_zone_player_play_card"]
[connection signal="acquire_draw_card" from="Table/RemotePlayZone" to="." method="_on_remote_play_zone_acquire_draw_card"]
